Projeto finalizado com mundanças nos botões de compartilhar e algumas cores

--- a/app/src/main/res/layout/repository_item.xml
+++ b/app/src/main/res/layout/repository_item.xml
@@ -20,23 +20,27 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_card_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#9F9C9C"
+            >
 
             <ImageView
-                android:id="@+id/iv_favorite"
+                android:id="@+id/sharing"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_margin="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/ic_share"
+                android:src="@drawable/ic_share_yellow"
+                android:contentDescription="@string/compartilhar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_preco"
+                android:id="@+id/et_name_reposit"
+                android:textColor="@color/purple_700"
                 style="@style/TextAppearance.AppCompat.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
